Quick fixes to Scheduler, and SchedulerStore