@@ -3,11 +3,12 @@ package Main;
 import java.io.IOException;
 import java.io.Serializable;
 import java.math.BigInteger;
-import java.net.DatagramPacket;
-import java.net.DatagramSocket;
-import java.net.InetAddress;
-import java.net.SocketException;
+import java.net.*;
+import java.rmi.Naming;
+import java.rmi.NotBoundException;
+import java.rmi.RemoteException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -24,7 +25,7 @@ public class Scheduler implements Runnable {
     private DatagramSocket sendReceiveSocket;
     private ElevatorEvent floorRequestToBeProcessed;
     private ElevatorEvent processedRequest;
-    private SchedulerStore store;
+    private SchedulerStoreInt store;
     int selectedElevator;
     String newEvent;
 
@@ -35,9 +36,12 @@ public class Scheduler implements Runnable {
      * Scheduler class constructor
      *
      */
-    public Scheduler(SchedulerStore store) {
+    public Scheduler(SchedulerStoreInt store) throws RemoteException {
         this.store = store;
+        sourceFloors = new HashMap<>();
+        destFloors = new HashMap<>();
         for(int i = 0; i < store.getElevators().size(); i++){
+            System.out.println("Elevator Found");
             sourceFloors.put(i, new ArrayList<>());
             destFloors.put(i, new ArrayList<>());
         }
@@ -47,6 +51,7 @@ public class Scheduler implements Runnable {
             se.printStackTrace();
             System.exit(1);
         }
+        System.out.println(sourceFloors);
     }
 
     /**
@@ -55,63 +60,70 @@ public class Scheduler implements Runnable {
     @Override
     public void run() {
         while (!Thread.interrupted()) {
-            checkArrivedAtDest();
-            checkArrivedAtSource();
-
             try {
+                if (arrayNotEmpty(sourceFloors)) checkArrivedAtDest();
+                if (arrayNotEmpty(destFloors)) checkArrivedAtSource();
                 readFloorRequest();
                 if (floorRequestToBeProcessed != null) {
                     System.out.println("Scheduler is processing: " + floorRequestToBeProcessed);
+                    selectedElevator = store.findClosest(floorRequestToBeProcessed);
+                    newEvent = processFloorRequest();
+                    sendSourceFloorToElevator(newEvent);
                 }
-                Thread.sleep(15);
-                selectedElevator = store.findClosest(floorRequestToBeProcessed);
-                newEvent = processFloorRequest();
-                sendSourceFloorToElevator(newEvent);
 
                 Thread.sleep(15);
 
-            } catch (InterruptedException e) {
+            } catch (InterruptedException | RemoteException e) {
                 Thread.currentThread().interrupt();
                 System.out.println("Scheduler was interrupted.");
             }
         }
     }
 
+    private boolean arrayNotEmpty(Map<Integer, ArrayList<Integer>> map)
+    {
+        for (ArrayList<Integer> vals : map.values())
+        {
+            if (!vals.isEmpty()) return true;
+        }
+        return false;
+    }
     /**
      * Read an ElevatorEvent from the floor request queue in store
      */
-    private void readFloorRequest() {
+    private void readFloorRequest() throws RemoteException {
         floorRequestToBeProcessed = store.getFloorRequest();
     }
 
     /**
      * Process the ElevatorEvent request and convert into an event usable by Elevator
      */
-    private String processFloorRequest() {
+    private String processFloorRequest() throws RemoteException {
         String translated = "03";
         if(((int) store.getElevators().get(selectedElevator).get(2)) > floorRequestToBeProcessed.getSourceFloor()){ // Finding where the request came from in relation to the elevator's current position
-            translated.concat("DN,");
+            translated = translated.concat("DN,");
         }else{
-            translated.concat("UP,");
+            translated = translated.concat("UP,");
         }
-        translated.concat(String.valueOf(floorRequestToBeProcessed.getSourceFloor()));
+        translated = translated.concat(String.valueOf(floorRequestToBeProcessed.getSourceFloor()));
 
         System.out.println("Scheduler: Processing floor event: " + floorRequestToBeProcessed);
         processedRequest = floorRequestToBeProcessed;
         return translated;
     }
 
+
     /**
      * Process and regurgitate the destination floor message to be sent to the elevator
      * */
-    private String destFloor(int destFloor){
+    private String destFloor(int destFloor) throws RemoteException {
         String desti = "03";
         if(destFloor > (int) store.getElevators().get(selectedElevator).get(2)){
-            desti.concat("UP,");
+            desti = desti.concat("UP,");
         }else{
-            desti.concat("DN,");
+            desti = desti.concat("DN,");
         }
-        desti.concat(String.valueOf(destFloor));
+        desti = desti.concat(String.valueOf(destFloor));
         return desti;
     }
 
@@ -126,7 +138,7 @@ public class Scheduler implements Runnable {
         try {
             byte[] toSend = HelperFunctions.generateMsg(happening);
             DatagramPacket sendPacket;
-            int ipAddress = (int) store.getElevators().get(selectedElevator).get(0);
+            int ipAddress = (int) store.getElevators().get(selectedElevator).getFirst();
             byte[] bytes = BigInteger.valueOf(ipAddress).toByteArray();
             InetAddress address = InetAddress.getByAddress(bytes);
             sendPacket = new DatagramPacket(toSend, toSend.length,
@@ -168,7 +180,7 @@ public class Scheduler implements Runnable {
         try {
             byte[] toSend = HelperFunctions.generateMsg(destFloor(floor));
             DatagramPacket destPacket;
-            int ipAddress = (int) store.getElevators().get(selectedElevator).get(0);
+            int ipAddress = (int) store.getElevators().get(selectedElevator).getFirst();
             byte[] bytes = BigInteger.valueOf(ipAddress).toByteArray();
             InetAddress address = InetAddress.getByAddress(bytes);
             destPacket = new DatagramPacket(toSend, toSend.length,
@@ -199,15 +211,16 @@ public class Scheduler implements Runnable {
     /**
      * Check if any elevators have arrived at a destination floor, and send them to their next destination floor if they have one.
      * */
-    private void checkArrivedAtDest(){
+    private void checkArrivedAtDest() throws RemoteException {
         Map<Integer, ArrayList<Serializable>> updatedElevs = store.getElevators();
-        for(int count = 0; count < updatedElevs.size(); count++){
+        System.out.println(destFloors);
+        for(int count = 1; count <= updatedElevs.size(); count++){
             for (Map.Entry<Integer, ArrayList<Integer>> entry : destFloors.entrySet()) {
                 if((int) updatedElevs.get(count).get(3) == 0){ //Is the elevator idle?
-                    if((int) updatedElevs.get(count).get(2) == entry.getValue().get(0)){ //Does it match the destination floor? The destination floors should be in the order they came in, hence the 0
-                        entry.getValue().remove(0); //Remove the destination floor
-                        if(entry.getValue().get(0) != null){ //Is there another destination after this one?
-                            sendDestFloorToElevator(destFloors.get(count).get(0));
+                    if((int) updatedElevs.get(count).get(2) == entry.getValue().getFirst()){ //Does it match the destination floor? The destination floors should be in the order they came in, hence the 0
+                        entry.getValue().removeFirst(); //Remove the destination floor
+                        if(entry.getValue().getFirst() != null){ //Is there another destination after this one?
+                            sendDestFloorToElevator(destFloors.get(count).getFirst());
                         }
                     }else{
                         System.out.println("Elevator " + entry.getKey().toString() + " is Idle on floor " + updatedElevs.get(count).get(2).toString() + ". It should not be there!");
@@ -220,14 +233,14 @@ public class Scheduler implements Runnable {
     /**
      * Check if any elevators have arrived at a source floor, and send them to their first destination floor.
      * */
-    private void checkArrivedAtSource(){
+    private void checkArrivedAtSource() throws RemoteException {
         Map<Integer, ArrayList<Serializable>> sourceElevs = store.getElevators();
         for(int count = 0; count < sourceElevs.size(); count++){
             for (Map.Entry<Integer, ArrayList<Integer>> entry : sourceFloors.entrySet()) {
                 if((int) sourceElevs.get(count).get(3) == 0){ //Is the elevator idle?
-                    if((int) sourceElevs.get(count).get(2) == entry.getValue().get(0)){ //Does it match the source floor? The destination floors should be in the order they came in, hence the 0
-                        entry.getValue().remove(0); //Remove the source floor
-                        sendDestFloorToElevator(destFloors.get(count).get(0));
+                    if((int) sourceElevs.get(count).get(2) == entry.getValue().getFirst()){ //Does it match the source floor? The destination floors should be in the order they came in, hence the 0
+                        entry.getValue().removeFirst(); //Remove the source floor
+                        sendDestFloorToElevator(destFloors.get(count).getFirst());
                     }else{
                         System.out.println("Elevator " + entry.getKey().toString() + " is Idle on floor " + sourceElevs.get(count).get(2).toString() + ". It should not be there!");
                     }
@@ -240,7 +253,11 @@ public class Scheduler implements Runnable {
     Setters and getters for testing purposes
      */
     public void setReadFloorRequest() {
-        this.floorRequestToBeProcessed = this.store.getFloorRequest();
+        try {
+            this.floorRequestToBeProcessed = this.store.getFloorRequest();
+        } catch (RemoteException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public void setProcessFloorRequest() {
@@ -259,5 +276,18 @@ public class Scheduler implements Runnable {
         return this.processedRequest;
     }
 
+    public static void main(String[] args)
+    {
+        try {
+            SchedulerStoreInt store = (SchedulerStoreInt) Naming.lookup("rmi://localhost/store");
+            Scheduler scheduler = new Scheduler(store);
+
+            Thread schedulerThread = new Thread(scheduler);
+            schedulerThread.start();
+        } catch (NotBoundException | MalformedURLException | RemoteException e) {
+            throw new RuntimeException(e);
+        }
+
+    }
 }
 
